<resources>
    <string name="app_name">ChatOle</string>

    <string name="title_section1">mensajes</string>
    <string name="title_section2">amigos</string>ç

    <string name="subtitle">Adrian Borja Gonzalo</string>
    <string name="cancel_button_label">Cancelar</string>

    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="Login_button_label">INGRESAR</string>
    <string name="sign_up_text">¡Regístrate!</string>
    <string name="email_hint">E-mail</string>
    <string name="sign_up_button_label">Regístrate</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_friends">Editar amigos</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_edit_friends">Editar Amigos</string>

    <string name="empty_inbox_label">No hay nuevos mensajes</string>
    <string name="empty_friends_label">Añade amigos para empezar</string>
    <string name="storage_Error">Error de almacenamiento</string>
    <string name="editFriendsErrorTitle">No se encuentran usuarios</string>
    <string name="menu_camera_label" />

    <string-array name="camera_choices">
        <item>Haz una foto</item>
        <item>Haz un video</item>
        <item>Elige una foto</item>
        <item>Elige un video</item>
    </string-array>

    <string name="title_activity_recipients">RecipientsActivity</string>

    <string name="Send">Enviar</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="content_desc_message_icon">Message Icon</string>

</resources>
