<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:background="@android:color/white" >

        <EditText
            style="@style/AuthEditText"
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>

        <EditText
            style="@style/AuthEditText"
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:layout_below="@+id/usernameField"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>

        <EditText
            style="@style/AuthEditText"
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:layout_below="@+id/passwordField"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
        </EditText>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"/>

    <Button
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signupButton"
        android:onClick="onClickRegistro"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_below="@+id/editTextLayout" />
    <Button
        style="@style/AuthButton"
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:onClick="onClick"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_below="@+id/editTextLayout"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:indeterminate="false" />
</RelativeLayout>
